--- a/index.html
+++ b/index.html
@@ -38,12 +38,66 @@
                     <input type="
                     submit" name="submit" value="Lets Starts">
                 </form>
-                
+            </div>
+        </div>
+    </div>
+
+    <!-- About Section Start -->
+    <section class="about">
+        <div class="main">
+            <img src="img/main-img.png" >
+            <div class="about-text">
+                <h2>About Me</h2>
+                <h5>Developer <span>& Designer</span></h5>
+                <p>I am a front-end web developer. I can provide clean and pixel perfect design. I also make the website more & more interactive with web animations. I can provide clean code and pixel perfect design. A responsive design makes your website accessible to all users, regardless of their device.</p>
+                <button type="button">Let's Talk</button>
 
             </div>
         </div>
 
+    </section>
+    <!-- Service section start -->
+    <div class="service">
+        <div class="title">
+            <h2>Our Services</h2>
+        </div>
+        <div class="box">
+            <div class="card">
+                <i class="fa-solid fa-bars"></i>
+                <h5>Web Development</h5>
+                <div class="pra">
+                    <p>Every website should be build with two primary goals: Firstly, it needs to work across all devices. Secondly, it needs to be fast as possible.</p>
+
+                    <p style="text-align: center;">
+                        <a class="button" href="#">Read More</a>
+                    </p>
+                </div>
+            </div>
+
+            <div class="card">
+                <i class="fa-solid fa-bars"></i>
+                <h5>Web Development</h5>
+                <div class="pra">
+                    <p>Every website should be build with two primary goals: Firstly, it needs to work across all devices. Secondly, it needs to be fast as possible.</p>
+
+                    <p style="text-align: center;">
+                        <a class="button" href="#">Read More</a>
+                    </p>
+                </div>
+            </div>
+
+            <div class="card">
+                <i class="fa-solid fa-bars"></i>
+                <h5>Web Development</h5>
+                <div class="pra">
+                    <p>Every website should be build with two primary goals: Firstly, it needs to work across all devices. Secondly, it needs to be fast as possible.</p>
+
+                    <p style="text-align: center;">
+                        <a class="button" href="#">Read More</a>
+                    </p>
+                </div>
+            </div>
+        </div>
     </div>
-    
 </body>
 </html>
