my portfolio is complete

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             </div>
 
             <div class="card">
-                <i class="fa-solid fa-bars"></i>
+                <i class="fa-solid fa-user"></i>
                 <h5>Web Development</h5>
                 <div class="pra">
                     <p>Every website should be build with two primary goals: Firstly, it needs to work across all devices. Secondly, it needs to be fast as possible.</p>
@@ -87,7 +87,7 @@
             </div>
 
             <div class="card">
-                <i class="fa-solid fa-bars"></i>
+                <i class="fa-solid fa-bell"></i>
                 <h5>Web Development</h5>
                 <div class="pra">
                     <p>Every website should be build with two primary goals: Firstly, it needs to work across all devices. Secondly, it needs to be fast as possible.</p>
@@ -99,5 +99,21 @@
             </div>
         </div>
     </div>
+    <!-- Contact Me -->
+    <div class="contact-me">
+        <p>Let Me Get You A Beautiful Website.</p>
+        <a class="button-two" href="#">Hire Me</a>
+    </div>
+    <!-- Footer Section start -->
+    <footer>
+        <p>Tuhin Sarker</p>
+        <p>For more HTML, CSS, and coding tutorial - please click on the link below to subscribe to my channel:</p>
+        <div class="social">
+            <a href="#"><i class="fa-brands fa-square-facebook"></i></a>
+            <a href="#"><i class="fa-brands fa-square-instagram"></i></a>
+            <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+        </div>
+        <p class="end">© My Portfolio 2022. All Right Reserved. By Tuhin Sarker</p>
+    </footer>
 </body>
 </html>
